--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -1,7 +1,7 @@
 # Associations
-- organization: Beer for the World
+- organization: GitHub Scholars
   role: Volunteer
-  year: 2008 &mdash; Present
+  year: 2008 &mdash; Present 
   summary: Organized fund drives and participated in fundraising events for the benefit of families in third world countries without proper access to malt beverages.
 
 
