--- a/_config.yml
+++ b/_config.yml
@@ -10,11 +10,11 @@ sass:
 
 # Resume settings
 resume_avatar:                  "true"
-resume_name:                    "Decarri oden"
-resume_title:                   "Github scholar"
+resume_name:                    "Decarri Oden"
+resume_title:                   "Github Scholar"
 resume_contact_email:
-  "homerjsimpson@youremailaddress.com"
-resume_header_contact_info: "742 Evergreen Terrace, Springfield | 555-7334 | homerjsimpson@youremailaddress.com"
+  "Decarrioden@gmail.com"
+resume_header_contact_info: "Atlanta ,Georgia | 404-433-5003 | decarrioden@gmail.com
 resume_header_intro: "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but K.I.S.S.</p>"
 
 # use "yes" to display the email contact button,
@@ -42,7 +42,7 @@ resume_social_links:
   # resume_facebook_url:          "insert Facebook URL here"
   resume_linkedin_url:          "https://www.linkedin.com/in/joelglovier"
   # resume_instagram_url:         "insert your Instagram URL here"
-  resume_website_url:           "http://joelglovier.com"
+  resume_website_url:           "http://decarri.github.io/resume-template/.com
 resume_print_social_links:      true
 
 # Design settings
