--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ resume_title:                   "Github Scholar"
 resume_contact_email:
   "Decarrioden@gmail.com"
 resume_header_contact_info: "Atlanta ,Georgia | 404-433-5003 | decarrioden@gmail.com
-resume_header_intro: "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but K.I.S.S.</p>"
+resume_header_intro: "<p>I am a motivated, strong and hardworking individual who expect to excel in everything I do. I love coding and pushing myself to the hood.</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
