--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,9 @@ resume_looking_for_work:        "yes"
 # Decide which sections to use
 # comment out to hide
 resume_section_experience:      true
-resume_section_education:       true
+resume_section_education:       I haven't graduated from highschool but I have recieved numerous awards, achieve multiple goals and accomplished many traisl;.
 resume_section_projects:        true
-resume_section_skills:          true
+resume_section_skills:          My abillity to express my creativity and bring amongst new ideas is profoundly impressive/
 resume_section_recognition:     true
 resume_section_links:           true
 resume_section_associations:    true
@@ -36,12 +36,12 @@ resume_section_associations:    true
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
-  resume_github_url:            "https://github.com/jglovier/resume-template"
-  resume_twitter_url:           "http://twitter.com/jglovier"
+  resume_github_url:            "https://github.com/Decarri oden/resume-template"
+  resume_twitter_url:           "http://twitter.com/Decarri oden"
   resume_dribbble_url:          "https://dribbble.com/jag"
-  # resume_facebook_url:          "insert Facebook URL here"
+  # resume_facebook_url:          "Decarri oden"
   resume_linkedin_url:          "https://www.linkedin.com/in/joelglovier"
-  # resume_instagram_url:         "insert your Instagram URL here"
+  # resume_instagram_url:         "Decarri oden"
   resume_website_url:           "http://decarri.github.io/resume-template/.com
 resume_print_social_links:      true
 
