--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Associates Degree, Business Management
-  uni: Springfield College
-  year: 1984 &mdash; 1986
-  awards: Quickest to fall asleep
-  summary: If you had any meaningful roles at college, feel free to write about them here
+- course: Pre cal,Ap Us ,Ap lang and physics honors
+  school: Therrel highschool
+  year: 2014 &mdash; present
+  awards: AB honoroll for 2 years then Principle list in my 11th grade year
+  summary: I've been at multiple JROTC events to help kids in my community. I remember when creating art projects and submitting them to libraries , that was so fun.
