--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,5 +1,5 @@
 # links
 - url: "#"
-  description: Springfield Poker Club
+  description: NGM
 - url: "#"
-  description: Springfield Donut Eater's User Group
+  description: next generation men is and organization to help yoing males to become more respnsible and experience to prepare them for oppurtunities.
